@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-06T16:18:28Z",
+  "timestamp" : "2024-02-07T08:17:47Z",
   "count_outdated" : 1565,
   "uniques_outdated" : 857,
-  "count" : 1594,
-  "uniques" : 872,
+  "count" : 1595,
+  "uniques" : 873,
   "clones" : [
     {
       "timestamp": "2024-01-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
